# spectral-forge

./: Cargo.toml  README.md  build.sh  notarize-signing-apple.md
docs/superpowers/plans/: 2026-04-12-spectral-forge.md  2026-04-19-plan-d1-module-foundation.md
docs/superpowers/specs/: 2026-04-12-spectral-forge-design.md  2026-04-19-modular-architecture-design.md
src/: bridge.rs  editor_ui.rs  lib.rs  params.rs
src/dsp/: fx_matrix.rs  guard.rs  mod.rs  pipeline.rs
src/dsp/engines/: mod.rs  spectral_compressor.rs
src/dsp/modules/: contrast.rs  dynamics.rs  freeze.rs  gain.rs  harmonic.rs  master.rs  mid_side.rs  mod.rs  phase_smear.rs  ts_split.rs
src/editor/: curve.rs  fx_matrix_grid.rs  mod.rs  spectrum_display.rs  suppression_display.rs  theme.rs
tests/: engine_contract.rs  module_trait.rs
xtask/src/: main.rs
